# DDUE-Recovery-Project-P1

./: .gitignore  CLAUDE.md  LINUX_IMPLEMENTATION.md  PLAN_MODE_PROMPT.md  README.md  SystemAnalizi.ps1  debug_mft.py  debug_partition.py  pyddeu.ini  pyddeu.map.PhysicalDrive0.8e49a29bfd.json  pyddeu.map.json  pyproject.toml  requirements.txt
dmde-files/: changelog.txt  dmde.ini  readme.txt  template.txt
docs/plans/: 2026-03-04-winui3-hybrid-design.md  2026-03-04-winui3-hybrid-implementation.md  2026-03-09-winui-bridge-contract.md
docs/reports/: linux-analysis-report.md
pyddeu/: carve.py  cli.py  config.py  exporter.py  gui.py  imager.py  mft.py  monitor.py  ntfs.py  ntfs_boot.py  partitions.py  platform.py  recover.py  scan.py  state.py  tskimg.py  winui_bridge.py
pyddeu/io/: __init__.py  base.py  factory.py  posix.py  windows.py
scripts/: run_winui.ps1
scripts/debug/: debug_mbr.py  debug_mbr_v2.py  debug_mbr_v3.py
temp-old-files/: p2.py  project.py
tests/: __init__.py  test_monitor.py  test_partitions.py  test_posix_io.py  test_scan.py  test_state.py  test_winui_bridge.py  test_winui_bridge_operations.py  test_winui_bridge_protocol.py
winui/PyDDEU.WinUI/: App.xaml  App.xaml.cs  Imports.cs  Package.appxmanifest  PyDDEU.WinUI.csproj  PyDDEU.WinUI.slnx  app.manifest
winui/PyDDEU.WinUI.Tests/: FileLogSinkTests.cs  FileTreeBuilderTests.cs  MainPageViewModelTests.cs  PyDDEU.WinUI.Tests.csproj  PythonBridgeClientTests.cs
winui/PyDDEU.WinUI/Models/: BridgeModels.cs  FileTreeModels.cs
winui/PyDDEU.WinUI/Properties/: AssemblyInfo.cs  launchSettings.json
(+8 files in other folders)
