[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyddeu"
version = "0.1.0"
description = "Cross-platform forensic NTFS browsing + recovery prototype (pytsk3)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pytsk3>=20230125"]

[project.scripts]
pyddeu = "pyddeu.cli:main"

